terminando fixando aprendizado

--- a/fundamentos/Introdução-à-HTML-e-CSS/dia01-01-HTML-&-CSS-Estruturas-de-página/index.html
+++ b/fundamentos/Introdução-à-HTML-e-CSS/dia01-01-HTML-&-CSS-Estruturas-de-página/index.html
@@ -12,7 +12,8 @@
         <li>Kleyton Rasta</li>
         <li>Cesar Menotti</li>
     </ul>
-    <img src="" alt="" width="">
-    <img src="" alt="" width="">
+    <img src="https://img.pokemondb.net/artwork/large/charmander.jpg" alt="charmander" width="300px">
+    <br>
+    <img src="./ecf228e8c15da1a8bd07f574e675a0ac59330968.png" alt="Trybe" width="300px">
 </body>
 </html>
