--- a/fundamentos/Introdução-à-HTML-e-CSS/Dia02-HTML-&CSS-Primeiros-passos-no-CSS/index.html
+++ b/fundamentos/Introdução-à-HTML-e-CSS/Dia02-HTML-&CSS-Primeiros-passos-no-CSS/index.html
@@ -2,25 +2,19 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Trybe</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        h1{
-            font-size: 65px;
-            color: orange;
-        }
-
-        .cor-de-fundo{
-            background-color: blue;
-        }
     </style>
   </head>
   <body>
-    <h1>Frutas</h1>
-    <p class="cor-de-fundo">Qual é a sua fruta favorita?</p>
-    <ul class="cor-de-fundo">
-      <li>Maçã</li>
-      <li>Banana</li>
-      <li>Goiaba</li>
+    <h1>Trybe</h1>
+    <h2 class="cor-de-fundo">Um novo curso para sua vida</h2>
+    <p class="cor-de-fundo">A porta de entrada para a sua carreira em tecnologia</p>
+    <ul>
+      <li id="verde">Ensinamos a programar</li>
+      <li id="verde-escuro">Ensinamos a aprender</li>
+      <li id="azul">Ensinamos a trabalhar</li>
     </ul>
   </body>
 </html>
